Edit profile picture feature
New feature in settings, the user can change its profile picture.

tootsdk was updated, this update was made with assistance of cursor, so may have some strange behavior

closes #4

--- a/Domain/Resources/Localizable.xcstrings
+++ b/Domain/Resources/Localizable.xcstrings
@@ -261,6 +261,9 @@
         }
       }
     },
+    "AGPL-3.0 License" : {
+
+    },
     "Alert" : {
       "comment" : "On the feed screen, when user sees an alert message",
       "localizations" : {
@@ -1593,6 +1596,9 @@
           }
         }
       }
+    },
+    "ok" : {
+
     },
     "OK" : {
       "comment" : "Ok button message for alert messages",
